--- a/src/Model.ipynb
+++ b/src/Model.ipynb
@@ -110,13 +110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "from FunctionsFile import *\n",
     "\n",
-    "train_img_paths,train_CleanedLabels,test_img_paths,test_CleanedLabels,validation_img_paths,validation_CleanedLabels,characters,max_len = ExtractData(\n",
+    "train_img_paths,train_CleanedLabels,test_img_paths,test_CleanedLabels,validation_img_paths,validation_CleanedLabels,characters,length = ExtractData(\n",
     "    'train_img_paths','train_CleanedLabels',\n",
     "    'test_img_paths','test_CleanedLabels',\n",
     "    'validation_img_paths','validation_CleanedLabels',\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +140,14 @@
       "Test Labels: 4823\n",
       "Validation Images : 4823\n",
       "Validation Labels : 4823\n",
-      "Characters  : 79 \n",
-      "Largest Word : 21\n",
+      "Number of unique Characters  : 79 \n",
+      "Length of Largest Word : 21\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "max_len = int(max_len[0])\n",
+    "max_len = length[0]\n",
     "\n",
     "print(f'''\n",
     "Train Images : {len(train_img_paths)}\n",
@@ -156,8 +156,8 @@
     "Test Labels: {len(test_CleanedLabels)}\n",
     "Validation Images : {len(validation_img_paths)}\n",
     "Validation Labels : {len(validation_CleanedLabels)}\n",
-    "Characters  : {len(characters)} \n",
-    "Largest Word : {max_len}\n",
+    "Number of unique Characters  : {len(characters)} \n",
+    "Length of Largest Word : {max_len}\n",
     "''')"
    ]
   },
